--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Do you like me?</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- 🔽 โค้ดที่คุณส่งมา วางตรงนี้ -->
 <!-- หน้าแรก -->
 <div class="container page show" id="questionPage">
   <h1>Do you like me? 💗</h1>
@@ -14,9 +24,13 @@
 
 <!-- เสียง -->
 <audio id="clickSound">
-  <source src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3" type="audio/mpeg">
+  <source src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3">
 </audio>
 
 <audio id="yaySound">
-  <source src="https://assets.mixkit.co/active_storage/sfx/2019/2019-preview.mp3" type="audio/mpeg">
+  <source src="https://assets.mixkit.co/active_storage/sfx/2019/2019-preview.mp3">
 </audio>
+
+<script src="script.js"></script>
+</body>
+</html>
