Add class to YAY heading and fix HTML structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 
-<!-- 🔽 โค้ดที่คุณส่งมา วางตรงนี้ -->
 <!-- หน้าแรก -->
 <div class="container page show" id="questionPage">
   <h1>Do you like me? 💗</h1>
@@ -17,7 +16,7 @@
 
 <!-- ตอนจบ -->
 <div class="container page" id="yesPage">
-  <h1>YAY!!! 💕🎉</h1>
+  <h1 class="yay">YAY!!! 💕🎉</h1>
   <p>You made my day brighter ✨</p>
   <p>Thank you for saying yes 😊</p>
 </div>
